Added gitignore and added configuration for StealthBurner.

--- a/klicky-bed-mesh-calibrate.cfg
+++ b/klicky-bed-mesh-calibrate.cfg
@@ -20,6 +20,7 @@ gcode:
         { action_respond_info("Bed Mesh Calibrate") }
     {% endif %}
 
+    STATUS_MESHING
     _CheckProbe action=query
 	G90
     Attach_Probe
