--- a/klicky-quad-gantry-level.cfg
+++ b/klicky-quad-gantry-level.cfg
@@ -20,6 +20,7 @@ gcode:
         { action_respond_info("QG Level") }
     {% endif %}
 
+    STATUS_LEVELING
     _CheckProbe action=query
 	G90
     Attach_Probe
