--- a/nozzle_scrub.cfg
+++ b/nozzle_scrub.cfg
@@ -142,6 +142,7 @@ variable_bucket_start: 0
 variable_bucket_pos:            1	        
 
 gcode:
+   STATUS_CLEANING
    # First, check if the axes are homed.
    {% if "xyz" in printer.toolhead.homed_axes %}
 
