--- a/printer.cfg
+++ b/printer.cfg
@@ -1,3 +1,4 @@
+[include shell_command.cfg]
 # This file contains common pin mappings for the Fysetc Spider board.
 # To use this config, the firmware should be compiled for the STM32F446.
 # When calling "menuconfig", enable "extra low-level configuration setup"
@@ -30,7 +31,7 @@ serial: /dev/ttyAMA0
 [printer]
 kinematics: corexy
 max_velocity: 500  
-max_accel: 4700			        #Max 4000
+max_accel: 6000			        #Max 4000
 max_z_velocity: 25			#Max 15 for 12V TMC Drivers, can increase for 24V
 max_z_accel: 500
 square_corner_velocity: 5.0
@@ -56,7 +57,7 @@ position_endstop: 300
 position_max: 300
 
 ##--------------------------------------------------------------------
-homing_speed: 50   #Max 100
+homing_speed: 100   #Max 100
 homing_retract_dist: 5
 homing_positive_dir: true
 
@@ -202,12 +203,14 @@ enable_pin: !PD4
 ##	rotation_distance = <previous_rotation_distance> * <actual_extrude_distance> / 100
 ##  22.6789511 is a good starting point
 #rotation_distance: 21.545003545	#Bondtech 5mm Drive Gears
-rotation_distance: 33.905745751720715    #Fysetc 12mm Drive Gears
+rotation_distance: 22.249095190429599 #SB Bondtech 5mm Drive Gears
+#rotation_distance: 33.905745751720715    #Fysetc 12mm Drive Gears
 ##	Update Gear Ratio depending on your Extruder Type
 ##	Use 50:17 for Afterburner/Clockwork (BMG Gear Ratio)
 ##	Use 80:20 for M4, M3.1
 #gear_ratio: 50:17				#BMG Gear Ratio
-gear_ratio: 7.5:1				#BMG 12mm Gear Ratio
+gear_ratio: 50:10				#SB BMG Gear Ratio
+#gear_ratio: 7.5:1				#BMG 12mm Gear Ratio
 microsteps: 64
 full_steps_per_rotation: 200	#200 for 1.8 degree, 400 for 0.9 degree
 nozzle_diameter: 0.400
@@ -238,8 +241,7 @@ pressure_advance_smooth_time: 0.040
 [tmc2209 extruder]
 uart_pin: PD7
 interpolate: False
-#run_current: 0.5
-run_current: 0.35
+run_current: 0.5
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
@@ -365,7 +367,7 @@ kick_start_time: 0.5
 off_below: 0.10
 
 [controller_fan controller_fan]
-##	Controller fan - FAN2 Connector
+#	Controller fan - FAN2 Connector
 pin: PB2
 kick_start_time: 0.5
 heater: heater_bed
@@ -385,7 +387,7 @@ fan_speed: 1.0
 #####################################################################
 
 [neopixel caselight]
-pin: PD3
+pin: PA2
 #   The pin connected to the neopixel. This parameter must be
 #   provided.
 chain_count: 54
@@ -399,6 +401,25 @@ initial_RED: 0.0
 initial_GREEN: 0.0
 initial_BLUE: 0.0
 initial_WHITE: 0.0
+#   Sets the initial LED color of the Neopixel. Each value should be
+#   between 0.0 and 1.0. The WHITE option is only available on RGBW
+#   LEDs. The default for each color is 0.#
+
+[neopixel sb_leds]
+pin: PD3
+#   The pin connected to the neopixel. This parameter must be
+#   provided.
+chain_count: 10
+#   The number of Neopixel chips that are "daisy chained" to the
+#   provided pin. The default is 1 (which indicates only a single
+#   Neopixel is connected to the pin).
+color_order: GRB, GRB, GRB, GRB, GRB, GRB, GRB, GRB, GRBW, GRBW
+#   Set the pixel order required by the LED hardware. Options are GRB,
+#   RGB, GRBW, or RGBW. The default is GRB.
+initial_RED: 0.01
+initial_GREEN: 0.01
+initial_BLUE: 0.01
+initial_WHITE: 0.01
 #   Sets the initial LED color of the Neopixel. Each value should be
 #   between 0.0 and 1.0. The WHITE option is only available on RGBW
 #   LEDs. The default for each color is 0.#
@@ -418,7 +439,7 @@ sensor_type: temperature_mcu
 #####################################################################
 
 [idle_timeout]
-timeout: 1800
+timeout: 3600
 
 #[safe_z_home]
 ##	XY Location of the Z Endstop Switch
@@ -500,18 +521,16 @@ gcode:
 #####################################################################
 #	Macros
 #####################################################################
-[include klicky-probe.cfg]
-
 [gcode_macro G32]
 gcode:
-    #SAVE_GCODE_STATE NAME=STATE_G32
     G90
+    STATUS_HOMING
     G28
     QUAD_GANTRY_LEVEL
     clean_nozzle                   ; Clean nozzle
+    STATUS_HOMING
     G28 Z
     clean_nozzle                   ; Clean nozzle
-    #SET_GCODE_OFFSET Z=0
     CALIBRATE_Z
     BED_MESH_CALIBRATE
     ##	Uncomment for for your size printer:
@@ -521,13 +540,15 @@ gcode:
     G0 X150 Y150 Z30 F3600
 
     #--------------------------------------------------------------------
-    #RESTORE_GCODE_STATE NAME=STATE_G32
+    STATUS_READY
    
 [gcode_macro PRINT_START]
 #   Use PRINT_START for the slicer starting script - please customise for your slicer of choice
 gcode:
     {% set BED = params.BED|default(60)|float %}
     {% set EXTRUDER = params.EXTRUDER|default(190)|float %}
+    {% set CHAMBER = params.CHAMBER|default(50)|float %}
+    STATUS_HEATING
     M117 Warmup
     CASELIGHT_HEATING
     M190 S{BED}                    ; set bed temp and wait for it reach temp
@@ -535,11 +556,13 @@ gcode:
     CASELIGHT_ON
     G32                            ; home all axes
     G90                            ; absolute positioning
-    G1 Z20 F3000                   ; move nozzle away from bed 
+    G1 Z20 F3000                   ; move nozzle away from bed
+    STATUS_PRINTING
 
 [gcode_macro PRINT_END]
 #   Use PRINT_END for the slicer ending script - please customise for your slicer of choice
 gcode:
+    STATUS_BUSY
     M400                           ; wait for buffer to clear
     G92 E0                         ; zero the extruder
     G1 E-5.0 F1800                 ; retract filament
@@ -552,6 +575,7 @@ gcode:
     G0  X125 Y250 F3600            ; park nozzle at rear
     BED_MESH_CLEAR
     CASELIGHT_OFF
+    STATUS_READY
 
 #--------------------------------------------------------------------
 
@@ -584,24 +608,31 @@ probe_points:
 #--------------------------------------------------------------------
 
 [input_shaper]
-#shaper_freq_x: 66.0
-#shaper_type_x: 2hump_ei
-#shaper_freq_y: 63.8
-#shaper_type_y: 3hump_ei
+shaper_freq_x: 62.0
+shaper_type_x: zv
+shaper_freq_y: 45.2
+shaper_type_y: mzv
 
 [save_variables]
 filename: ~/klipper_config/saved_variables.cfg
 
 [exclude_object]
 
+[include klicky-probe.cfg]
 [include fast_infill.cfg]
 [include menu_fast_infill.cfg]
 [include nozzle_scrub.cfg]
 [include menu_nozzle_scrub.cfg]
+[include menu.cfg]
+[include lcd_tweaks.cfg]
 [include timelapse.cfg]
 [include caselight.cfg]
+[include stealthburner_leds.cfg]
+[include macros_sb.cfg]
 [include macro_pa.cfg]
 [include mainsail.cfg]
+[include vibr_calibrate_01.cfg]
+[include vibr_calibrate_02.cfg]
 
 ## 	Thermistor Types
 ##   "EPCOS 100K B57560G104F"
@@ -617,18 +648,12 @@ filename: ~/klipper_config/saved_variables.cfg
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 28.327
-#*# pid_ki = 1.782
-#*# pid_kd = 112.599
+#*# pid_kp = 27.419
+#*# pid_ki = 1.498
+#*# pid_kd = 125.442
 #*#
 #*# [heater_bed]
 #*# control = pid
-#*# pid_kp = 40.931
-#*# pid_ki = 1.654
-#*# pid_kd = 253.260
-#*#
-#*# [input_shaper]
-#*# shaper_type_x = 3hump_ei
-#*# shaper_freq_x = 104.6
-#*# shaper_type_y = 3hump_ei
-#*# shaper_freq_y = 75.8
+#*# pid_kp = 41.111
+#*# pid_ki = 1.713
+#*# pid_kd = 246.666
