Various modifications, added KlipperScreen.

--- a/macro_pa.cfg
+++ b/macro_pa.cfg
@@ -26,21 +26,21 @@
 #   PRESSURE_ADVANCE_CALIBRATION START=0.01 INCREMENT=0.002 RAFT=1
 #
 # Primary input parameters:
-#    START       : default(0.01)   PA value to start with
-#    INCREMENT   : default(0.002)  PA value to increment for each subsequent band
-#    RAFT        : default(1)      whether to print a raft or not. printing one makes the finished test east to remove from the bed
+#    START       : default(0.02)   PA value to start with
+#    INCREMENT   : default(0.005)  PA value to increment for each subsequent band
+#    DO_RAFT     : default(1)      whether to print a raft or not. printing one makes the finished test east to remove from the bed
 #    EXTRUSION_MULTIPLIER: default(1.25 if raft enabled, 1.5 if disabled)   extrusion multiplier to apply to printing lines in the band
 #
 # Other tunable parameters:
-#    SIZE          : default(120)    maximum width/height, in mm,  that the test can make use of. the model will be printed in the middle of the bed
+#    PRINT_SIZE    : default(120)    maximum width/height, in mm,  that the test can make use of. the model will be printed in the middle of the bed
 #    BANDS_LIMIT   : default(999)    optionally the number of bands can be limited this way. otherwise as many bands that fit in the given SIZE will be printed
 #    CONTROL_SPEED : default(30)     speed at which the control lines in a band are printed at, mm/sec
 #    OUTER_SPEED   : default(40)     speed of printing the outer parts of the test lines in a band, mm/sec
-#    INNER_SPEED   : default(120)    speed of printing the middle part of the test lines in a band, mm/sec
+#    INNER_SPEED   : default(80)     speed of printing the middle part of the test lines in a band, mm/sec
 #    TRAVEL_SPEED  : default(200)    speed of travel moves, mm/sec
-#    RAFT_SPEED    : default(120)    speed of printing the raft, if enabled, mm/sec
+#    RAFT_SPEED    : default(80)     speed of printing the raft, if enabled, mm/sec
 #    LINES_PER_BAND: default(6)    number of lines per band. half of these will be control, another half the test lines
-#    RETRACT       : default(0.6)  retraction, in mm, to perform when traveling   
+#    RETRACT_LENGTH: default(0.6)  retraction, in mm, to perform when traveling   
 #    PURGE_MM      : default(8)    purge this amount of mm of filament before starting the print
 #    LINE_SPACING  : default(0.4)  spacing between individual lines in a band
 #
@@ -53,20 +53,21 @@
 # Based on the idea from a post by DonStauffer on https://forum.duet3d.com/topic/25161/my-pressure-advance-calibration
 #
 [gcode_macro PRESSURE_ADVANCE_CALIBRATION]
+description: Calibrate the pressure advance by printing a grid pattern
 gcode:
     # 
     # input and tunables
     #
-    {% set pa_start     = params.START|default(0.01)|float %}       # starting PA value
-    {% set pa_increment = params.INCREMENT|default(0.002)|float %}  # how much to increment PA per band
+    {% set pa_start     = params.START|default(0.02)|float %}       # starting PA value
+    {% set pa_increment = params.INCREMENT|default(0.005)|float %}  # how much to increment PA per band
 
-    {% set do_raft = params.RAFT|default(1)|int %}  # whether to print a raft or not
+    {% set do_raft = params.DO_RAFT|default(1)|int %}  # whether to print a raft or not
     
-    {% set print_size      = params.SIZE|default(120)|int %}                      # width/height of the printed test
+    {% set print_size      = params.PRINT_SIZE|default(120)|int %}                # width/height of the printed test
     {% set num_bands       = params.BANDS_LIMIT|default(999)|int %}               # limit the number of bands to print. othwerwise print as many as would fit within a given size
     {% set lines_per_band  = params.LINES_PER_BAND|default(6)|int %}              # number of lines per band. half are control, another half the test
     {% set e_multiplier    = params.EXTRUSION_MULTIPLIER|default(1.25 if do_raft == 1 else 1.5)|float %},  # extrusion multiplier for line print moves
-    {% set retract_length  = params.RETRACT|default(0.6)|float %}                 # how much to retract when traveling between print moves
+    {% set retract_length  = params.RETRACT_LENGTH|default(0.6)|float %}          # how much to retract when traveling between print moves
     {% set initial_purge   = params.PURGE_MM|default(8)|int %}                    # mm of filament to purge before printing. set to 0 to disable
 
     {% set feedrate_control = params.CONTROL_SPEED|default(30)|int * 60 %}  # print feedrate of the line in the middle of the band
@@ -131,6 +132,7 @@ gcode:
       "Your final Pressure Advance value would then be:"
     )}
     {action_respond_info("")}
+    {action_respond_info("Assuming that first band_number is 0")}
     {action_respond_info("PA = %.4f + (%.4f * band_number)" % (pa_start, pa_increment))}
     {action_respond_info("")}
     {action_respond_info("Update your [extruder] config section and set \"pressure_advance\" to the value you calculated.")}
@@ -147,6 +149,11 @@ gcode:
     SAVE_GCODE_STATE NAME=STATE_PRESSURE_ADVANCE_CALIBRATION
     {% set pa_saved = printer.configfile.settings['extruder'].pressure_advance %}
     SET_PRESSURE_ADVANCE ADVANCE={pa_start}  # start with a given PA
+    
+    #
+    # set extrude_factor to 1 
+    #
+    M221 S100
 
     #
     # purging before raft
@@ -199,10 +206,10 @@ gcode:
     G1 E{retract_length} F{feedrate_retract}  # unretract
 
     # print bands
-    {% for curr_band_num in range(1, num_bands + 1) %}
+    {% for curr_band_num in range(0, num_bands ) %}
       {% set outer_loop = loop %}
 
-      {% set curr_pa_value = pa_start + (curr_band_num - 1) * pa_increment %}
+      {% set curr_pa_value = pa_start + curr_band_num * pa_increment %}
       SET_PRESSURE_ADVANCE ADVANCE={curr_pa_value}  # set PA
       M117 Band {curr_band_num} PA {curr_pa_value|round(4)}
 
