--- a/moonraker.conf
+++ b/moonraker.conf
@@ -1,11 +1,9 @@
 [server]
 host: 0.0.0.0
 port: 7125
-enable_debug_logging: True
 klippy_uds_address: /tmp/klippy_uds
 
 [database]
-database_path: ~/.moonraker_database
 
 [authorization]
 trusted_clients:
@@ -23,8 +21,6 @@ cors_domains:
     *://app.fluidd.xyz
 
 [file_manager]
-config_path: /home/pi/klipper_config
-log_path: /home/pi/klipper_logs
 enable_object_processing: True
 
 [octoprint_compat]
@@ -70,3 +66,12 @@ origin: https://github.com/mainsail-crew/crowsnest.git
 #env: /home/pi/.KlipperScreen-env/bin/python
 #requirements: scripts/KlipperScreen-requirements.txt
 #install_script: scripts/KlipperScreen-install.sh
+
+
+[update_manager led_effect]
+type: git_repo
+path: ~/klipper-led_effect
+origin: https://github.com/julianschill/klipper-led_effect.git
+is_system_service: False
+
+
