--- a/stealthburner_leds.cfg
+++ b/stealthburner_leds.cfg
@@ -90,12 +90,12 @@ variable_colors: {
     }
 variable_logo_led_name:         "sb_leds" 
 # The name of the addressable LED chain that contains the logo LED(s)
-variable_logo_idx:              "1,2,3,4,5,6,7,8" 
+variable_logo_idx:              "1,2,3,4,5,6,7,8" # For PCB Logo
 # A comma-separated list of indexes LEDs in the logo
 variable_nozzle_led_name:       "sb_leds"
 # The name of the addressable LED chain that contains the nozzle LED(s). This will
 # typically be the same LED chain as the logo.
-variable_nozzle_idx:            "9,10"
+variable_nozzle_idx:            "9,10" # For PCB Logo
 # A comma-separated list of indexes of LEDs in the nozzle
 
 variable_thermal_config: {
@@ -195,7 +195,8 @@ gcode:
 
 [gcode_macro status_heating]
 gcode:
-    _set_sb_leds_by_name leds="logo" color="heating" transmit=0
+#    _set_sb_leds_by_name leds="logo" color="heating" transmit=0
+    SET_LED_EFFECT EFFECT=loading
     _set_sb_leds_by_name leds="nozzle" color="heating" transmit=1
 
 [gcode_macro status_leveling]
