--- a/printer.cfg
+++ b/printer.cfg
@@ -31,7 +31,7 @@ serial: /dev/ttyAMA0
 [printer]
 kinematics: corexy
 max_velocity: 500  
-max_accel: 6000			        #Max 4000
+max_accel: 10000			        #Max 4000
 max_z_velocity: 25			#Max 15 for 12V TMC Drivers, can increase for 24V
 max_z_accel: 500
 square_corner_velocity: 5.0
@@ -47,7 +47,7 @@ dir_pin: !PE10
 enable_pin: !PE9
 rotation_distance: 40
 microsteps: 64
-full_steps_per_rotation:200  #set to 400 for 0.9 degree stepper
+full_steps_per_rotation: 200  #set to 400 for 0.9 degree stepper
 endstop_pin: ^PB14
 position_min: 0
 
@@ -218,7 +218,8 @@ filament_diameter: 1.75
 ##      In E0 OUT Position
 heater_pin: PB15
 ##	Validate the following thermistor type to make sure it is correct
-sensor_type: ATC Semitec 104GT-2
+#sensor_type: ATC Semitec 104GT-2 # Dragon
+sensor_type: ATC Semitec 104NT-4-R025H42G # E3D Revo
 sensor_pin: PC0 # TE0 Position
 min_temp: 10
 max_temp: 270
@@ -252,8 +253,8 @@ stealthchop_threshold: 0
 ##	SSR Pin - In BED OUT position
 heater_pin: PB4
 sensor_type: Generic 3950
-sensor_pin: PC3 # Spider v1.x TB Position
-#sensor_pin: PB0 # Spider v2.x TB Position
+#sensor_pin: PC3 # Spider v1.x TB Position
+sensor_pin: PB0 # Spider v2.x TB Position
 ##	Adjust Max Power so your heater doesn't warp your bed
 max_power: 0.6
 min_temp: 0
@@ -336,9 +337,9 @@ mesh_max: 260,260
 ##--------------------------------------------------------------------
 fade_start: 0.6
 fade_end: 10.0
-probe_count: 5,5
+probe_count: 7,7
 algorithm: bicubic
-relative_reference_index: 12
+relative_reference_index: 24
 
 #####################################################################
 #	Fan Control
@@ -346,19 +347,19 @@ relative_reference_index: 12
 
 [heater_fan hotend_fan]
 ##	Hotend Fan - FAN0 Connector
-pin: PB0 # Spider v1.x
-#pin: PA13 # Spider v2.x
+#pin: PB0 # Spider v1.x
+pin: PA13 # Spider v2.x
 max_power: 1.0
 kick_start_time: 0.5
 heater: extruder
 heater_temp: 50.0
 ##	If you are experiencing back flow, you can reduce fan_speed
-#fan_speed: 1.0
+fan_speed: 1.0
 
 [fan]
 ##	Print Cooling Fan - FAN1 Connector
-pin: PB1 # Spider v1.x
-#pin: PA14 # Spider v2.x
+#pin: PB1 # Spider v1.x
+pin: PA14 # Spider v2.x
 max_power: 1.0
 kick_start_time: 0.5
 ##	Depending on your fan, you may need to increase this value
@@ -387,7 +388,7 @@ fan_speed: 1.0
 #####################################################################
 
 [neopixel caselight]
-pin: PA2
+pin: PD3
 #   The pin connected to the neopixel. This parameter must be
 #   provided.
 chain_count: 54
@@ -406,14 +407,14 @@ initial_WHITE: 0.0
 #   LEDs. The default for each color is 0.#
 
 [neopixel sb_leds]
-pin: PD3
+pin: PA2
 #   The pin connected to the neopixel. This parameter must be
 #   provided.
-chain_count: 10
+chain_count: 10 # For PCB Logo
 #   The number of Neopixel chips that are "daisy chained" to the
 #   provided pin. The default is 1 (which indicates only a single
 #   Neopixel is connected to the pin).
-color_order: GRB, GRB, GRB, GRB, GRB, GRB, GRB, GRB, GRBW, GRBW
+color_order: GRB, GRB, GRB, GRB, GRB, GRB, GRB, GRB, GRBW, GRBW # For PCB Logo
 #   Set the pixel order required by the LED hardware. Options are GRB,
 #   RGB, GRBW, or RGBW. The default is GRB.
 initial_RED: 0.01
@@ -471,7 +472,7 @@ points:
 	250,25
 
 #--------------------------------------------------------------------
-speed: 200
+speed: 300
 horizontal_move_z: 10
 retries: 5
 retry_tolerance: 0.0075
@@ -523,6 +524,7 @@ gcode:
 #####################################################################
 [gcode_macro G32]
 gcode:
+    {% set mesh_center = printer["gcode_macro _ADAPTIVE_MESH_VARIABLES"].mesh_center %}
     G90
     STATUS_HOMING
     G28
@@ -531,8 +533,11 @@ gcode:
     STATUS_HOMING
     G28 Z
     clean_nozzle                   ; Clean nozzle
-    CALIBRATE_Z
-    BED_MESH_CALIBRATE
+
+    #CALIBRATE_Z
+    #BED_MESH_CALIBRATE
+    CALIBRATE_Z BED_POSITION={mesh_center}
+    ADAPTIVE_BED_MESH
     ##	Uncomment for for your size printer:
     #--------------------------------------------------------------------
 
@@ -548,12 +553,15 @@ gcode:
     {% set BED = params.BED|default(60)|float %}
     {% set EXTRUDER = params.EXTRUDER|default(190)|float %}
     {% set CHAMBER = params.CHAMBER|default(50)|float %}
+    {% set FL_SIZE = params.SIZE|default("0_0_0_0")|string %}
     STATUS_HEATING
     M117 Warmup
     CASELIGHT_HEATING
     M190 S{BED}                    ; set bed temp and wait for it reach temp
     M109 S{EXTRUDER|int}           ; M109 heat and wait for it to reach temp
+    STOP_LED_EFFECTS
     CASELIGHT_ON
+    COMPUTE_MESH_PARAMETERS SIZE={FL_SIZE}
     G32                            ; home all axes
     G90                            ; absolute positioning
     G1 Z20 F3000                   ; move nozzle away from bed
@@ -608,9 +616,9 @@ probe_points:
 #--------------------------------------------------------------------
 
 [input_shaper]
-shaper_freq_x: 62.0
+shaper_freq_x: 61.4
 shaper_type_x: zv
-shaper_freq_y: 45.2
+shaper_freq_y: 44.4
 shaper_type_y: mzv
 
 [save_variables]
@@ -628,8 +636,10 @@ filename: ~/klipper_config/saved_variables.cfg
 [include timelapse.cfg]
 [include caselight.cfg]
 [include stealthburner_leds.cfg]
+[include led_effects.cfg]
 [include macros_sb.cfg]
 [include macro_pa.cfg]
+[include macro_bed_mesh.cfg]
 [include mainsail.cfg]
 [include vibr_calibrate_01.cfg]
 [include vibr_calibrate_02.cfg]
@@ -648,12 +658,31 @@ filename: ~/klipper_config/saved_variables.cfg
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 27.419
-#*# pid_ki = 1.498
-#*# pid_kd = 125.442
+#*# pid_kp = 26.976
+#*# pid_ki = 1.474
+#*# pid_kd = 123.416
 #*#
 #*# [heater_bed]
 #*# control = pid
 #*# pid_kp = 41.111
 #*# pid_ki = 1.713
 #*# pid_kd = 246.666
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	-0.036250, -0.006250, 0.008125, -0.008125, -0.038750
+#*# 	-0.045000, -0.024375, 0.011875, 0.103125, 0.048125
+#*# 	-0.042500, -0.021875, 0.000000, 0.041875, -0.023750
+#*# 	-0.046875, -0.026250, -0.001875, 0.000625, -0.030625
+#*# 	-0.038125, -0.018125, 0.011250, 0.005000, -0.023750
+#*# tension = 0.2
+#*# min_x = 73.0
+#*# algo = bicubic
+#*# y_count = 5
+#*# mesh_y_pps = 2
+#*# min_y = 78.0
+#*# x_count = 5
+#*# max_y = 221.0
+#*# mesh_x_pps = 2
+#*# max_x = 226.0
