A lot of changes for QOL or upstream changes.

--- a/mainsail.cfg
+++ b/mainsail.cfg
@@ -86,5 +86,5 @@ gcode:
     {action_respond_info("Printer not homed")}
   {% endif %}
 
-[menu __main __octoprint]
-type: disabled
+#[menu __main __octoprint]
+#type: disabled
