--- a/printer.cfg
+++ b/printer.cfg
@@ -218,8 +218,8 @@ filament_diameter: 1.75
 ##      In E0 OUT Position
 heater_pin: PB15
 ##	Validate the following thermistor type to make sure it is correct
-#sensor_type: ATC Semitec 104GT-2 # Dragon
-sensor_type: ATC Semitec 104NT-4-R025H42G # E3D Revo
+sensor_type: ATC Semitec 104GT-2 # Dragon
+#sensor_type: ATC Semitec 104NT-4-R025H42G # E3D Revo
 sensor_pin: PC0 # TE0 Position
 min_temp: 10
 max_temp: 270
@@ -233,7 +233,7 @@ max_extrude_only_distance: 150
 ##	Try to keep pressure_advance below 1.0
 #pressure_advance: 0.05
 #pressure_advance: 0.04 #Afterburner
-pressure_advance: 0.04 #Galileo
+pressure_advance: 0.03 #SB
 ##	Default is 0.040, leave stock
 pressure_advance_smooth_time: 0.040
 
@@ -417,10 +417,10 @@ chain_count: 10 # For PCB Logo
 color_order: GRB, GRB, GRB, GRB, GRB, GRB, GRB, GRB, GRBW, GRBW # For PCB Logo
 #   Set the pixel order required by the LED hardware. Options are GRB,
 #   RGB, GRBW, or RGBW. The default is GRB.
-initial_RED: 0.01
-initial_GREEN: 0.01
-initial_BLUE: 0.01
-initial_WHITE: 0.01
+initial_RED: 0.0
+initial_GREEN: 0.0
+initial_BLUE: 0.0
+initial_WHITE: 0.0
 #   Sets the initial LED color of the Neopixel. Each value should be
 #   between 0.0 and 1.0. The WHITE option is only available on RGBW
 #   LEDs. The default for each color is 0.#
@@ -484,37 +484,37 @@ max_adjust: 10
 
 #--------------------------------------------------------------------
 
-[display]
+#[display]
 #	mini12864 LCD Display
-lcd_type: uc1701
-cs_pin: PC11
-a0_pin: PD2
-rst_pin: PC10
-encoder_pins: ^PC6,^PC7
-click_pin: ^!PA8
-contrast: 63
-#spi_bus: spi1
-spi_software_mosi_pin: PA7
-spi_software_miso_pin: PA6
-spi_software_sclk_pin: PA5
+#lcd_type: uc1701
+#cs_pin: PC11
+#a0_pin: PD2
+#rst_pin: PC10
+#encoder_pins: ^PC6,^PC7
+#click_pin: ^!PA8
+#contrast: 63
+##spi_bus: spi1
+#spi_software_mosi_pin: PA7
+#spi_software_miso_pin: PA6
+#spi_software_sclk_pin: PA5
 
-[neopixel fysetc_mini12864]
+#[neopixel fysetc_mini12864]
 #	To control Neopixel RGB in mini12864 display
-pin: PC12
-chain_count: 3
-initial_RED: 0.1
-initial_GREEN: 0.5
-initial_BLUE: 0.0
-color_order: RGB
+#pin: PC12
+#chain_count: 3
+#initial_RED: 0.1
+#initial_GREEN: 0.5
+#initial_BLUE: 0.0
+#color_order: RGB
 
 #	Set RGB values on boot up for each Neopixel. 
 #	Index 1 = display, Index 2 and 3 = Knob
-[delayed_gcode setdisplayneopixel]
-initial_duration: 1
-gcode:
-        SET_LED LED=fysetc_mini12864 RED=1 GREEN=1 BLUE=1 INDEX=1 TRANSMIT=0
-        SET_LED LED=fysetc_mini12864 RED=1 GREEN=0 BLUE=0 INDEX=2 TRANSMIT=0
-        SET_LED LED=fysetc_mini12864 RED=1 GREEN=0 BLUE=0 INDEX=3 
+#[delayed_gcode setdisplayneopixel]
+#initial_duration: 1
+#gcode:
+#        SET_LED LED=fysetc_mini12864 RED=1 GREEN=1 BLUE=1 INDEX=1 TRANSMIT=0
+#        SET_LED LED=fysetc_mini12864 RED=1 GREEN=0 BLUE=0 INDEX=2 TRANSMIT=0
+#        SET_LED LED=fysetc_mini12864 RED=1 GREEN=0 BLUE=0 INDEX=3 
 
 #--------------------------------------------------------------------
 
@@ -558,7 +558,7 @@ gcode:
     M117 Warmup
     CASELIGHT_HEATING
     M190 S{BED}                    ; set bed temp and wait for it reach temp
-    M109 S{EXTRUDER|int}           ; M109 heat and wait for it to reach temp
+    M109 S{EXTRUDER}           ; M109 heat and wait for it to reach temp
     STOP_LED_EFFECTS
     CASELIGHT_ON
     COMPUTE_MESH_PARAMETERS SIZE={FL_SIZE}
@@ -583,7 +583,7 @@ gcode:
     G0  X125 Y250 F3600            ; park nozzle at rear
     BED_MESH_CLEAR
     CASELIGHT_OFF
-    STATUS_READY
+    STATUS_OFF
 
 #--------------------------------------------------------------------
 
@@ -593,7 +593,7 @@ gcode:
 #####################################################################
 
 [gcode_arcs]
-resolution: 0.2
+resolution: 0.012
 #   An arc will be split into segments. Each segment's length will
 #   equal the resolution in mm set above. Lower values will produce a
 #   finer arc, but also more work for your machine. Arcs smaller than
@@ -616,9 +616,9 @@ probe_points:
 #--------------------------------------------------------------------
 
 [input_shaper]
-shaper_freq_x: 61.4
+shaper_freq_x: 60.6
 shaper_type_x: zv
-shaper_freq_y: 44.4
+shaper_freq_y: 43.4
 shaper_type_y: mzv
 
 [save_variables]
@@ -628,16 +628,13 @@ filename: ~/klipper_config/saved_variables.cfg
 
 [include klicky-probe.cfg]
 [include fast_infill.cfg]
-[include menu_fast_infill.cfg]
 [include nozzle_scrub.cfg]
-[include menu_nozzle_scrub.cfg]
-[include menu.cfg]
-[include lcd_tweaks.cfg]
 [include timelapse.cfg]
 [include caselight.cfg]
 [include stealthburner_leds.cfg]
 [include led_effects.cfg]
 [include macros_sb.cfg]
+[include macros_filament.cfg]
 [include macro_pa.cfg]
 [include macro_bed_mesh.cfg]
 [include mainsail.cfg]
@@ -658,31 +655,12 @@ filename: ~/klipper_config/saved_variables.cfg
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 26.976
-#*# pid_ki = 1.474
-#*# pid_kd = 123.416
+#*# pid_kp = 27.924
+#*# pid_ki = 1.551
+#*# pid_kd = 125.659
 #*#
 #*# [heater_bed]
 #*# control = pid
-#*# pid_kp = 41.111
-#*# pid_ki = 1.713
-#*# pid_kd = 246.666
-#*#
-#*# [bed_mesh default]
-#*# version = 1
-#*# points =
-#*# 	-0.036250, -0.006250, 0.008125, -0.008125, -0.038750
-#*# 	-0.045000, -0.024375, 0.011875, 0.103125, 0.048125
-#*# 	-0.042500, -0.021875, 0.000000, 0.041875, -0.023750
-#*# 	-0.046875, -0.026250, -0.001875, 0.000625, -0.030625
-#*# 	-0.038125, -0.018125, 0.011250, 0.005000, -0.023750
-#*# tension = 0.2
-#*# min_x = 73.0
-#*# algo = bicubic
-#*# y_count = 5
-#*# mesh_y_pps = 2
-#*# min_y = 78.0
-#*# x_count = 5
-#*# max_y = 221.0
-#*# mesh_x_pps = 2
-#*# max_x = 226.0
+#*# pid_kp = 41.669
+#*# pid_ki = 1.828
+#*# pid_kd = 237.511
