--- a/klicky-variables.cfg
+++ b/klicky-variables.cfg
@@ -34,7 +34,7 @@ variable_z_endstop_y:          300
 
 #Check the printer specific documentation on klipper Dock/Undock configuration, these are dummy values
 #dock location 
-variable_docklocation_x:       159    # X Dock position
+variable_docklocation_x:       161    # X Dock position
 variable_docklocation_y:       296    # Y Dock position
 variable_docklocation_z:      -128    # Z dock position (-128 for a gantry/frame mount)
 
@@ -64,7 +64,7 @@ variable_umbilical_y:           15    # Y umbilical position
 variable_park_toolhead:      False    # Enable toolhead parking
 variable_parkposition_x:       125
 variable_parkposition_y:       125
-variable_parkposition_z:        30
+variable_parkposition_z:        30    # -128 excludes Z - Park only on X-Y
 
 variable_version:                1    # Helps users to update the necessary variables, do not update if the variables above are not updated
 
@@ -84,6 +84,7 @@ variable_override_homing:       ''    # configures what axis to home first
                                       # 'Y' = forces Y to home first
                                       
 variable_dock_on_zhome:       True    # docks the probe on Z Homing if not necessary (avoids hitting the bed on some printers
+variable_bypass_probe_docking:        False                               
 
 # Do not modify below
 gcode:
