--- a/led_effects.cfg
+++ b/led_effects.cfg
@@ -1,5 +1,5 @@
 [led_effect logo_idle]
-autostart:              true
+autostart:              false
 frame_rate:             24
 leds:
     neopixel:sb_leds (1-8)
