Before tap update.

--- a/moonraker.conf
+++ b/moonraker.conf
@@ -1,7 +1,7 @@
 [server]
 host: 0.0.0.0
 port: 7125
-klippy_uds_address: /tmp/klippy_uds
+klippy_uds_address: /home/pi/printer_data/comms/klippy.sock
 
 [database]
 
@@ -53,6 +53,7 @@ install_script: install.sh
 type: git_repo
 path: ~/crowsnest
 origin: https://github.com/mainsail-crew/crowsnest.git
+install_script: tools/install.sh
 
 #[update_manager fluidd]
 #type: web
