--- a/KlipperScreen.conf
+++ b/KlipperScreen.conf
@@ -4,6 +4,7 @@
 #~# [main]
 #~# screen_blanking = 900
 #~# confirm_estop = True
+#~# print_sort_dir = date_desc
 #~# 
 #~# [graph Printer]
 #~# extruder = False
