--- a/moonraker.conf
+++ b/moonraker.conf
@@ -11,9 +11,11 @@ trusted_clients:
     127.0.0.0/8
     169.254.0.0/16
     172.16.0.0/12
+    172.18.0.0/12
     192.168.0.0/16
     FE80::/10
     ::1/128
+    85.26.36.146
 cors_domains:
     *.lan
     *.local
@@ -43,12 +45,6 @@ primary_branch: main
 path: ~/moonraker-timelapse
 origin: https://github.com/mainsail-crew/moonraker-timelapse.git
 
-[update_manager client z_calibration]
-type: git_repo
-path: ~/klipper_z_calibration
-origin: https://github.com/protoloft/klipper_z_calibration.git
-install_script: install.sh
-
 [update_manager crowsnest]
 type: git_repo
 path: ~/crowsnest
@@ -74,4 +70,37 @@ path: ~/klipper-led_effect
 origin: https://github.com/julianschill/klipper-led_effect.git
 is_system_service: False
 
+[update_manager klipper_tmc_autotune]
+type: git_repo
+channel: dev
+path: ~/klipper_tmc_autotune
+origin: https://github.com/andrewmcgr/klipper_tmc_autotune.git
+managed_services: klipper
+primary_branch: main
+install_script: install.sh
 
+[update_manager klipper_auto_speed]
+type: git_repo
+path: ~/klipper_auto_speed
+origin: https://github.com/anonoei/klipper_auto_speed.git
+primary_branch: main
+install_script: install.sh
+managed_services: klipper
+
+[spoolman]
+server: http://192.168.1.2:7912
+#   URL to the Spoolman instance. This parameter must be provided.
+sync_rate: 5
+#   The interval, in seconds, between sync requests with the
+#   Spoolman server.  The default is 5.
+
+## Klippain Shake&Tune automatic update management
+[update_manager Klippain-ShakeTune]
+type: git_repo
+origin: https://github.com/Frix-x/klippain-shaketune.git
+path: ~/klippain_shaketune
+virtualenv: ~/klippain_shaketune-env
+requirements: requirements.txt
+system_dependencies: system-dependencies.json
+primary_branch: main
+managed_services: klipper
