--- a/printer.cfg
+++ b/printer.cfg
@@ -30,11 +30,16 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_27004A001551303530323539-if00
 
 [printer]
 kinematics: corexy
-max_velocity: 500
-max_accel: 10000			        #Max 4000 - 7500
+max_velocity: 700
+max_accel: 20000			        #Max 4000 - 7500
 max_z_velocity: 25			#Max 15 for 12V TMC Drivers, can increase for 24V
 max_z_accel: 500
 square_corner_velocity: 5.0
+# AUTO SPEED found recommended acceleration and velocity after 151.68s
+# | DIAG X max: a39574 v710
+# | DIAG Y max: a36274 v710
+# Recommended accel: 36274
+# Recommended velocity: 710
 
 #####################################################################
 #      X/Y Stepper Settings
@@ -65,7 +70,7 @@ homing_positive_dir: true
 ##	Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_x]
 uart_pin: PE7
-interpolate: False
+interpolate: True
 run_current: 1.0
 sense_resistor: 0.110
 stealthchop_threshold: 0
@@ -93,7 +98,7 @@ homing_positive_dir: true
 ##	Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_y]
 uart_pin: PE15
-interpolate: False
+interpolate: True
 run_current: 1.0
 sense_resistor: 0.110
 stealthchop_threshold: 0
@@ -112,12 +117,12 @@ rotation_distance: 40
 gear_ratio: 80:16
 microsteps: 64
 ##  In Z- Position
-endstop_pin: ^PA0
+endstop_pin: probe:z_virtual_endstop
 ##  Z-position of nozzle (in mm) to z-endstop trigger point relative to print surface (Z0)
 ##  (+) value = endstop above Z0, (-) value = endstop below
 ##	Increasing position_endstop brings nozzle closer to the bed
 ##  After you run Z_ENDSTOP_CALIBRATE, position_endstop will be stored at the very end of your config
-position_endstop: 0.250
+#position_endstop: 0.250
 ##--------------------------------------------------------------------
 
 position_max: 290
@@ -131,7 +136,7 @@ homing_retract_dist: 3
 ##	Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_z]
 uart_pin: PD10
-interpolate: False
+interpolate: True
 run_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 0
@@ -149,7 +154,7 @@ microsteps: 64
 ##	Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_z1]
 uart_pin: PC14
-interpolate: False
+interpolate: True
 run_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 0
@@ -167,7 +172,7 @@ microsteps: 64
 ##	Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_z2]
 uart_pin: PC15
-interpolate: False
+interpolate: True
 run_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 0
@@ -184,7 +189,7 @@ microsteps: 64
 
 [tmc2209 stepper_z3]
 uart_pin: PA15
-interpolate: False
+interpolate: True
 run_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 0
@@ -223,11 +228,11 @@ filament_diameter: 1.75
 #heater_pin: PB15
 heater_pin: EBBCan: PB13
 ##	Validate the following thermistor type to make sure it is correct
-sensor_type: ATC Semitec 104GT-2 # Dragon
-#sensor_type: ATC Semitec 104NT-4-R025H42G # E3D Revo
+#sensor_type: ATC Semitec 104GT-2 # Dragon
+sensor_type: ATC Semitec 104NT-4-R025H42G # E3D Revo
 #sensor_pin: PC0 # TE0 Position
 sensor_pin: EBBCan: PA3
-min_temp: 10
+min_temp: 0
 max_temp: 270
 max_power: 1.0
 min_extrude_temp: 170
@@ -291,14 +296,30 @@ pin: EBBCan: PB5
 #samples_tolerance: 0.006
 #samples_tolerance_retries: 3
 x_offset: 0
-y_offset: 19.75
-z_offset: 6.42
+y_offset: 0
+#z_offset: 0
 speed: 7
 samples: 3 
 samples_result: median
 sample_retract_dist: 2.0
 samples_tolerance: 0.01
 samples_tolerance_retries: 3
+activate_gcode:
+    {% set PROBE_TEMP = 150 %}
+    {% set MAX_TEMP = PROBE_TEMP + 5 %}
+    {% set ACTUAL_TEMP = printer.extruder.temperature %}
+    {% set TARGET_TEMP = printer.extruder.target %}
+
+    {% if TARGET_TEMP > PROBE_TEMP %}
+        { action_respond_info('Extruder temperature target of %.1fC is too high, lowering to %.1fC' % (TARGET_TEMP, PROBE_TEMP)) }
+        M109 S{ PROBE_TEMP }
+    {% else %}
+        # Temperature target is already low enough, but nozzle may still be too hot.
+        {% if ACTUAL_TEMP > MAX_TEMP %}
+            { action_respond_info('Extruder temperature %.1fC is still too high, waiting until below %.1fC' % (ACTUAL_TEMP, MAX_TEMP)) }
+            TEMPERATURE_WAIT SENSOR=extruder MAXIMUM={ MAX_TEMP }
+        {% endif %}
+    {% endif %}
 
 #####################################################################
 #	Bltouch
@@ -347,7 +368,8 @@ fade_end: 10.0
 probe_count: 7,7
 algorithm: bicubic
 #zero_reference_position: 149.98, 149.98
-relative_reference_index: 24
+#relative_reference_index: 24
+zero_reference_position: 150, 150
 
 #####################################################################
 #	Fan Control
@@ -455,15 +477,14 @@ gcode_id: C
 [idle_timeout]
 timeout: 3600
 
-#[safe_z_home]
+[safe_z_home]
 ##	XY Location of the Z Endstop Switch
 ##	Update -10,-10 to the XY coordinates of your endstop pin 
 ##	(such as 157,305) after going through Z Endstop Pin
 ##	Location Definition step.
-#home_xy_position: 207,300
-#speed:200
-#z_hop:10
-#safe_z_height: 7.5
+home_xy_position: 150,150
+speed:200
+z_hop:10
    
 [quad_gantry_level]
 ##	Use QUAD_GANTRY_LEVEL to level a gantry.
@@ -486,7 +507,7 @@ points:
 	250,25
 
 #--------------------------------------------------------------------
-speed: 300
+speed: 600
 horizontal_move_z: 10
 retries: 5
 retry_tolerance: 0.0075
@@ -543,18 +564,17 @@ gcode:
 
 [gcode_macro G32]
 gcode:
-    {% set mesh_center = printer["gcode_macro _ADAPTIVE_MESH_VARIABLES"].mesh_center %}
     G90
     STATUS_HOMING
     G28
-    QUAD_GANTRY_LEVEL
     clean_nozzle                   ; Clean nozzle
+    QUAD_GANTRY_LEVEL
+    #clean_nozzle                   ; Clean nozzle
     STATUS_HOMING
     G28 Z
-    clean_nozzle                   ; Clean nozzle
+    #clean_nozzle                   ; Clean nozzle
 
-    CALIBRATE_Z BED_POSITION={mesh_center}
-    ADAPTIVE_BED_MESH
+    BED_MESH_CALIBRATE ADAPTIVE=1
     PARK
     STATUS_READY
    
@@ -570,13 +590,14 @@ gcode:
     CASELIGHT_HEATING
     CONFIGURE_EXTRUDER
     M190 S{BED}                    ; set bed temp and wait for it reach temp
-    M109 S{EXTRUDER}           ; M109 heat and wait for it to reach temp
+    M109 S150           ; M109 heat and wait for it to reach 150°C for TAP
     STOP_LED_EFFECTS
     CASELIGHT_ON
     COMPUTE_MESH_PARAMETERS SIZE={FL_SIZE}
     G32                            ; home all axes
     G90                            ; absolute positioning
     G1 Z20 F3000                   ; move nozzle away from bed
+    M109 S{EXTRUDER}           ; M109 heat and wait for it to reach temp
     STATUS_PRINTING
 
 [gcode_macro PRINT_END]
@@ -638,31 +659,58 @@ serial: /tmp/klipper_host_mcu
 #--------------------------------------------------------------------
 
 [input_shaper]
-shaper_freq_x: 61.8
+shaper_freq_x: 55.0
 shaper_type_x: zv
-shaper_freq_y: 43.6
-shaper_type_y: zv
+shaper_freq_y: 40.8
+shaper_type_y: mzv
 
 [save_variables]
 filename: ~/printer_data/config/saved_variables.cfg
 
 [exclude_object]
+[respond]
+[auto_speed]
+
+#[autotune_tmc extruder]
+#motor: ldo-36sth20-1004ahg
 
 [include canbus-ebb.cfg]
-[include klicky-probe.cfg]
+#[include klicky-probe.cfg]
 [include fast_infill.cfg]
 [include nozzle_scrub.cfg]
 [include timelapse.cfg]
 [include caselight.cfg]
 [include stealthburner_leds.cfg]
 [include led_effects.cfg]
-[include macros_sb.cfg]
 [include macros_filament.cfg]
 [include macro_pa.cfg]
 [include macro_bed_mesh.cfg]
 [include mainsail.cfg]
-[include vibr_calibrate_01.cfg]
-[include vibr_calibrate_02.cfg]
+#[include IS_shaper_calibrate.cfg]
+#[include IS_vibrations_measurement.cfg]
+[include K-ShakeTune/*.cfg]
+
+[autotune_tmc stepper_x]
+motor: omc-17hs19-2004s1
+[autotune_tmc stepper_y]
+motor: omc-17hs19-2004s1
+
+[autotune_tmc stepper_z]
+motor: omc-17hs19-2004s1
+[autotune_tmc stepper_z1]
+motor: omc-17hs19-2004s1
+[autotune_tmc stepper_z2]
+motor: omc-17hs19-2004s1
+[autotune_tmc stepper_z3]
+motor: omc-17hs19-2004s1
+
+#[autotune_tmc extruder]
+#motor: fysetc-g36hsy4405-6d-30
+
+[gcode_shell_command plot_graph]
+command: python3 /home/pi/printer_data/config/scripts/is_workflow.py
+timeout: 500.0
+verbose: True
 
 ## 	Thermistor Types
 ##   "EPCOS 100K B57560G104F"
@@ -678,9 +726,9 @@ filename: ~/printer_data/config/saved_variables.cfg
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 28.112
-#*# pid_ki = 1.688
-#*# pid_kd = 117.020
+#*# pid_kp = 24.862
+#*# pid_ki = 2.550
+#*# pid_kd = 60.603
 #*#
 #*# [heater_bed]
 #*# control = pid
@@ -691,16 +739,23 @@ filename: ~/printer_data/config/saved_variables.cfg
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.013294, 0.004206, -0.021419
-#*# 	  -0.003919, -0.000169, -0.005794
-#*# 	  -0.014544, -0.000169, -0.021419
-#*# x_count = 3
-#*# y_count = 3
+#*# 	-0.091476, -0.055851, -0.035226, -0.028351, -0.041476, -0.067101, -0.092101
+#*# 	-0.080226, -0.034601, -0.006476, 0.003524, -0.030851, -0.047726, -0.078351
+#*# 	-0.080851, -0.040851, -0.012726, -0.003351, -0.032726, -0.040226, -0.075851
+#*# 	-0.073351, -0.025851, 0.000399, 0.000399, -0.012101, -0.041476, -0.062101
+#*# 	-0.095226, -0.054601, -0.033976, -0.022101, -0.030851, -0.045226, -0.088976
+#*# 	-0.100226, -0.054601, -0.037726, -0.011476, -0.023976, -0.052101, -0.095851
+#*# 	-0.098976, -0.051476, -0.038976, -0.022101, -0.030226, -0.057101, -0.102726
+#*# x_count = 7
+#*# y_count = 7
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 2
-#*# algo = lagrange
+#*# algo = bicubic
 #*# tension = 0.2
-#*# min_x = 127.0
-#*# max_x = 177.0
-#*# min_y = 114.0
-#*# max_y = 192.0
+#*# min_x = 46.0
+#*# max_x = 253.0
+#*# min_y = 46.0
+#*# max_y = 253.0
+#*#
+#*# [probe]
+#*# z_offset = -1.435
